--- a/p8105_hw2_alc2279.md
+++ b/p8105_hw2_alc2279.md
@@ -70,7 +70,7 @@ subway_data =
 Part 2: Describe dataset
 ------------------------
 
-### Prompt:
+### Prompt
 
 Write a short paragraph about this dataset – explain briefly what variables the dataset contains, describe your data cleaning steps so far, and give the dimension (rows x columns) of the resulting dataset. Are these data tidy?
 
@@ -211,13 +211,18 @@ Part 2: Describe dataset
 
 ### Prompt
 
-Write a paragraph about these data; you are encouraged to use inline R. Be sure to note: \* the number of observations in both resulting datasets \* give examples of key variables For available data, what was the total precipitation in 2017? What was the median number of sports balls in a dumpster in 2016?
+Write a paragraph about these data; you are encouraged to use inline R. Be sure to note:
+
+-   the number of observations in both resulting datasets
+-   give examples of key variables
+
+For available data, what was the total precipitation in 2017? What was the median number of sports balls in a dumpster in 2016?
 
 ### Response
 
 The first dataset created includes data about the volume/weight and type of trash picked up by the the water wheels (water\_wheel\_data) by date going back to May 2014. The data in its current state is not tidy (i.e. the year variable has missing data, which can easily be cleaned). This data contains 215 observations and 14 columns. The median number of sports balls that were collected in 2016 by the dumpster was 26.
 
-The second dataset includes precipitation data for 2016 and 2017 (i.e. number of inches of rain by month and year). It was created by combining the 2016 dataset (12 rows and 3 columns) and the 2017 dataset (8 rows and 3 columns). The resulting data is 20 observations and 3 columns. The total rainfall in 2017 that was recoded (months Jan through Aug) is 29.93.
+The second dataset includes precipitation data for 2016 and 2017 (i.e. number of inches of rain by month and year). It was created by combining the 2016 dataset (12 rows and 3 columns) and the 2017 dataset (8 rows and 3 columns). The resulting data is 20 observations and 3 columns. The total rainfall in 2017 that was recorded (months Jan through Aug) is 29.93.
 
 I can see that joining these tables would be benficial to see how rainfall affects the amount of trash collected. To join these tables, I would use a concatenated variable of month and year as the "key" variables. Other important variables would be rainfall and weight/volume of data collected.
 
@@ -239,10 +244,9 @@ For this question:
 
 ``` r
 devtools::install_github("p8105/p8105.datasets")
-```
 
-    ## Skipping install of 'p8105.datasets' from a github remote, the SHA1 (21f5ad1c) has not changed since last install.
-    ##   Use `force = TRUE` to force installation
+## assuming that this is already installed for TAs; if I did not assume that the audience had this installed, I would keep make sure that this was evaluated
+```
 
 ``` r
 library(p8105.datasets)
@@ -345,7 +349,7 @@ ggplot(brfss_data %>% filter(year == 2002), aes(x = excellent)) +
 
     ## Warning: Removed 2 rows containing non-finite values (stat_bin).
 
-![](p8105_hw2_alc2279_files/figure-markdown_github/unnamed-chunk-16-1.png)
+![](p8105_hw2_alc2279_files/figure-markdown_github/unnamed-chunk-17-1.png)
 
 -   Make a scatterplot showing the proportion of “Excellent” response values in New York County and Queens County (both in NY State) in each year from 2002 to 2010.
 
@@ -355,4 +359,4 @@ ggplot(brfss_data %>% filter(county %in% c("NY - Queens County", "NY - New York 
   geom_point(aes(color = county))
 ```
 
-![](p8105_hw2_alc2279_files/figure-markdown_github/unnamed-chunk-17-1.png)
+![](p8105_hw2_alc2279_files/figure-markdown_github/unnamed-chunk-18-1.png)
