--- a/p8105_hw2_alc2279.md
+++ b/p8105_hw2_alc2279.md
@@ -31,14 +31,14 @@ Read and clean the data; retain line, station, name, station latitude / longitud
 library(tidyverse)
 ```
 
-    ## -- Attaching packages ------------------------------------------------------------- tidyverse 1.2.1 --
+    ## -- Attaching packages ----------------------------------------------------- tidyverse 1.2.1 --
 
     ## v ggplot2 3.0.0     v purrr   0.2.5
     ## v tibble  1.4.2     v dplyr   0.7.6
     ## v tidyr   0.8.1     v stringr 1.3.1
     ## v readr   1.1.1     v forcats 0.3.0
 
-    ## -- Conflicts ---------------------------------------------------------------- tidyverse_conflicts() --
+    ## -- Conflicts -------------------------------------------------------- tidyverse_conflicts() --
     ## x dplyr::filter() masks stats::filter()
     ## x dplyr::lag()    masks stats::lag()
 
@@ -135,22 +135,22 @@ How many distinct stations serve the A train?
 ``` r
 subway_data %>% 
   filter(route_name == "A") %>% 
-  distinct(.data = ., station_name) %>% 
+  distinct(.data = ., station_name, line) %>% 
   nrow(.)
 ```
 
-    ## [1] 56
+    ## [1] 60
 
 Of the stations that serve the A train, how many are ADA compliant?
 
 ``` r
 subway_data %>% 
   filter(route_name == "A", ada == TRUE) %>% 
-  distinct(.data = ., station_name) %>% 
+  distinct(.data = ., station_name, line) %>% 
   nrow(.)
 ```
 
-    ## [1] 16
+    ## [1] 17
 
 Problem 2
 =========
@@ -170,7 +170,7 @@ Read and clean the Mr. Trash Wheel sheet:
 ``` r
 library(readxl)
 
-water_wheel_data = read_excel("./data/HealthyHarborWaterWheelTotals2017-9-26.xlsx", 
+water_wheel_data = read_excel("./data/HealthyHarborWaterWheelTotals2018-7-28.xlsx", 
                               sheet = "Mr. Trash Wheel",
                               range = cell_cols("A:N")) %>% 
   janitor::clean_names() %>% 
@@ -182,7 +182,7 @@ water_wheel_data = read_excel("./data/HealthyHarborWaterWheelTotals2017-9-26.xls
 Read and clean precipitation data for 2016 and 2017. For each, omit rows without precipitation data and add a variable year.
 
 ``` r
-precipitation_2016_data = read_excel("./data/HealthyHarborWaterWheelTotals2017-9-26.xlsx", 
+precipitation_2016_data = read_excel("./data/HealthyHarborWaterWheelTotals2018-7-28.xlsx", 
                               sheet = "2016 Precipitation",
                               range = "A2:B14") %>%
   janitor::clean_names() %>% 
@@ -190,7 +190,7 @@ precipitation_2016_data = read_excel("./data/HealthyHarborWaterWheelTotals2017-9
   filter(!is.na(precipitation_in)) %>% 
   mutate(year = "2016")
 
-precipitation_2017_data = read_excel("./data/HealthyHarborWaterWheelTotals2017-9-26.xlsx", 
+precipitation_2017_data = read_excel("./data/HealthyHarborWaterWheelTotals2018-7-28.xlsx", 
                               sheet = "2017 Precipitation",
                               range = "A2:B14") %>% 
   janitor::clean_names() %>% 
@@ -220,9 +220,9 @@ For available data, what was the total precipitation in 2017? What was the media
 
 ### Response
 
-The first dataset created includes data about the volume/weight and type of trash picked up by the the water wheels (water\_wheel\_data) by date going back to May 2014. The data in its current state is not tidy (i.e. the year variable has missing data, which can easily be cleaned). This data contains 215 observations and 14 columns. The median number of sports balls that were collected in 2016 by the dumpster was 26.
+The first dataset created includes data about the volume/weight and type of trash picked up by the the water wheels (water\_wheel\_data) by date going back to May 2014. The data in its current state is not tidy (i.e. the year variable has missing data, which can easily be cleaned). This data contains 285 observations and 14 columns. The median number of sports balls that were collected in 2016 by the dumpster was 26.
 
-The second dataset includes precipitation data for 2016 and 2017 (i.e. number of inches of rain by month and year). It was created by combining the 2016 dataset (12 rows and 3 columns) and the 2017 dataset (8 rows and 3 columns). The resulting data is 20 observations and 3 columns. The total rainfall in 2017 that was recorded (months Jan through Aug) is 29.93.
+The second dataset includes precipitation data for 2016 and 2017 (i.e. number of inches of rain by month and year). It was created by combining the 2016 dataset (12 rows and 3 columns) and the 2017 dataset (12 rows and 3 columns). The resulting data is 24 observations and 3 columns. The total rainfall in 2017 that was recorded (months Jan through Aug) is 32.93.
 
 I can see that joining these tables would be benficial to see how rainfall affects the amount of trash collected. To join these tables, I would use a concatenated variable of month and year as the "key" variables. Other important variables would be rainfall and weight/volume of data collected.
 
@@ -354,7 +354,8 @@ ggplot(brfss_data %>% filter(year == 2002), aes(x = excellent)) +
 -   Make a scatterplot showing the proportion of “Excellent” response values in New York County and Queens County (both in NY State) in each year from 2002 to 2010.
 
 ``` r
-ggplot(brfss_data %>% filter(county %in% c("NY - Queens County", "NY - New York County")) , 
+ggplot(brfss_data %>% 
+         filter(county %in% c("NY - Queens County", "NY - New York County")), 
   aes(x = year, y = excellent)) + 
   geom_point(aes(color = county))
 ```
